--- a/areal-1.html
+++ b/areal-1.html
@@ -13,7 +13,7 @@
             let total;
             total = længde*bredde;
 
-            console.log("Længden er 3 meter og bredden er 5 meter. Arealet er " + total + " kvadratmeter");
+            console.log("Længden er " + længde +  " meter og bredden er " + bredde + " meter. Arealet er " + total + " kvadratmeter");
 
         </script>
     </body>
