--- a/goddag-3.html
+++ b/goddag-3.html
@@ -10,10 +10,10 @@
         <script>
         let navn=prompt("Hvad hedder du?");
 
-        if (navn){
-        alert("Goddag " + navn)}
+        if (navn)
+        alert("Goddag " + navn)
 
-        else (alert("Goddag min ven"))
+        else alert("Goddag min ven")
         </script>
     </body>
 </head>
