--- a/dag2/querySelector.html
+++ b/dag2/querySelector.html
@@ -11,7 +11,8 @@
 
     <script>
         const myBut = document.querySelector("#myBut");
-        console.log(myBut);
+        console.log("myBut");
     </script>
+
 </body>
 </head>
