--- a/JS-2-extra-exercises/4.html
+++ b/JS-2-extra-exercises/4.html
@@ -78,6 +78,11 @@
     </div>
 
     <script>
+
+
+
+        /////////// VIRKER IKKE
+
         const glad = document.querySelector("#glad");
 
         glad.addEventListener("click", glad);
