--- a/dag3/dyr-d.html
+++ b/dag3/dyr-d.html
@@ -7,14 +7,14 @@
     </head>
     <body>
         <div class="dyr">
-            <strong class="navn"></strong>:<br>
+            <strong class="navn"></strong><br>
             <img src="" alt=""><br>
             et <span class="type"></span>,
             som lever i <span class="levested"></span>
 
         </div>
         <script>
-            let dyr={"navn":"elefant","type":"pattedyr","levested":"Indien","billede":"bogo.jpg"};
+            let dyr={"navn":"Elefant:","type":"pattedyr","levested":"Indien","billede":"bogo.jpg"};
             document.addEventListener("DOMContentLoaded", start);
             function start(){
                 document.querySelector(".dyr .navn").textContent=dyr.navn;
