--- a/dag3/dyr-e.html
+++ b/dag3/dyr-e.html
@@ -10,6 +10,7 @@
     <div class="liste">
 
     </div>
+
     <script>
         let dyr = [{
             "navn": "Elefant:", "type": "pattedyr", "levested": "Indien", "billede": "bogo.jpg"
@@ -18,7 +19,7 @@
             "navn": "Sild:", "type": "fisk", "levested": "Nordsøen", "billede": "bogo.jpg"
         },
                    {
-            "navn": "Sild:", "type": "fisk", "levested": "Nordsøen", "billede": "bogo.jpg"
+            "navn": "Krokdille:", "type": "krybdyr", "levested": "Nilen", "billede": "bogo.jpg"
         }]
 
 
